add performance stat image for presentation.

--- a/presentation/demo.tex
+++ b/presentation/demo.tex
@@ -133,6 +133,10 @@
 \section{Performance}
 \begin{frame}[t]
     \frametitle{Performance}
+    \begin{figure}[h!]
+    	\includegraphics[scale=0.5]{comparision_bplus}
+    \end{figure}
+    \centering
 \end{frame}
 \section{Possible improvements}
 \begin{frame}[t]
